# riemannian_dog

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
experiment_data/: README.md  __init__.py  pca.py  wordnet.py
experiment_utils/: batch.py  dataset.py  dataset_test.py  minimise.py  objectives.py  objectives_test.py  wordnet.py
experiment_utils/embeddings/: __init__.py  metrics.py  sampling.py
experiment_utils/plots/: __init__.py  plotstyle.mplstyle
experiments/grassmann_pca/: plot_tiny_image_net.py  plot_waveform.py  plot_wine.py  tiny_image_net.py  waveform.py  wine.py
experiments/poincare_wordnet/five_dimensional/: burnin_plots.py  mammals.py  mammals_productwise.py  noburnin_mammals.py  noburnin_mammals_productwise.py  noburnin_plots.py
experiments/poincare_wordnet/two_dimensional/: mammals.py  plot_embeddings.py  plot_mammals.py
experiments/sphere_rayleigh/: plot_sphere.py  sphere.py
experiments/toy/: plot_toy.py  toy.py
manifold/: gradient.py  gradient_test.py
manifold/geometry/: __init__.py  base.py  base_test.py  euclidean.py  euclidean_test.py  grassmann.py  grassmann_test.py  poincare.py  poincare_test.py  product_same.py  sphere.py  sphere_test.py  utils.py  utils_test.py  zeta.py  zeta_test.py
manifold/optimisers/: __init__.py  alias.py  alias_test.py  averagers.py  combine.py  combine_test.py  transformations.py
